# AI_agent_in_Python

./: .env  .gitignore  README.md  call_function.py  call_functions.py  docasny_test.py  main.py  pyproject.toml  requirements.txt  test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write_file.py  tests.py
calculator/: lorem.txt
functions/: get_file_content.py  get_files_info.py  run_python.py  run_python_file.py  skuska.py  write_file.py
